--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Sans";
   font-style: normal;
   font-weight: 400;
   src: url("../fonts/ptsans-400.woff2") format("woff2");
@@ -8,7 +8,7 @@
 
 
 @font-face {
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Sans";
   font-style: normal;
   font-weight: 700;
   src: url("../fonts/ptsans-700.woff2") format("woff2");
@@ -79,11 +79,24 @@ body {
   list-style-type: none;
 }
 
-
+.navigation-link,
 .navigation-link-current {
-  text-underline-offset: 10px;
-  text-decoration-thickness: 2px;
-  color: #000000;
+    color: #756157;
+}
+
+.navigation-link:hover,
+.navigation-link-current:hover {
+    color: #756157;
+}
+
+.navigation-link:focus,
+.navigation-link-current:focus {
+    color:  #000;
+}
+
+.navigation-link:active,
+.navigation-link-current:active {
+    color:  #d6d0cd;
 }
 
 .navigation-link-current:before {
@@ -117,8 +130,37 @@ body {
   text-decoration: none;
   text-transform: none;
   color: #000000;
-  padding: 20px 16px;
+  padding: 24px 16px 19px;
   display: block;
+}
+
+.navigation-user-link-search:hover {
+  color: #756157;
+  opacity: 0.6;
+}
+
+.navigation-user-link-search:focus {
+  color: #000;
+}
+
+.navigation-user-link-search:active {
+  color: #d6d0cd;
+  opacity: 0.3;
+}
+
+
+.navigation-user-link-favorite:hover {
+  color: #756157;
+  opacity: 0.6;
+}
+
+.navigation-user-link-favorite:focus {
+  color: #000;
+}
+
+.navigation-user-link-favorite:active {
+  color: #d6d0cd;
+  opacity: 0.3;
 }
 
 .favorite-icon-heart {
@@ -174,27 +216,22 @@ body {
   display: inline-flex;
   width: 47px;
   height: 40px;
-  align-items: center;
+  text-align: center;
+  color:#723f5e;
+  background-color: transparent;
 }
 
-.footer-social-icon {
+.footer-social-link:hover {
   color: #83B3D3;
 }
 
-.footer-social-icon:hover {
-  background-color: #68a2ca;
+.footer-social-link:focus {
+  color: #68a2ca;
 }
 
-.footer-social-icon:focus {
-  background-color: #68a2ca;
-}
-
-.footer-social-icon:active {
-  background-color: #82b3d3;
-}
-
-.footer-social-icon:disabled {
-  background-color: #e5e5e5;
+.footer-social-link:active  {
+  color: #82b3d3;
+  opacity: 0.3
 }
 
 .header-button {
@@ -210,10 +247,12 @@ body {
   margin-left: 20px;
   text-decoration: none;
   display: inline-flex;
-  padding: 14px;
+  padding: 8px;
   justify-content: center;
   align-items: center;
   border-radius: 4px;
+  user-select: none;
+  transition: all 0.5s ease;
 }
 
 .header-button:hover {
@@ -226,6 +265,7 @@ body {
 
 .header-button:active {
   color: #756157;
+  opacity: 0.3
 }
 
 .header-button:disabled {
@@ -236,7 +276,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   padding: 0;
-  margin: auto;
+  margin: 0;
   margin-left: auto;
 }
 
@@ -272,8 +312,8 @@ body {
   padding: 0;
   margin: 0;
   margin-bottom: 20px;
-  padding-left: 290px;
-  padding-right: 290px;
+  padding-left: 200px;
+  padding-right: 200px;
 }
 
 /* Преимущества и туристические плюшки */
@@ -327,6 +367,7 @@ body {
   text-align: center;
   margin: 0;
   margin-bottom: 62px;
+  position: relative;
 }
 
 .advantages-item h3::before {
@@ -335,9 +376,9 @@ body {
   width: 60px;
   height: 2px;
   background-color: rgba(255,255,255,0.3);
-  bottom: -140px;
+  bottom: -32px;
   left: 50%;
-  transform: translateX(-50%)
+  transform: translateX(-50%);
 }
 
 .advantages-item p {
@@ -361,8 +402,20 @@ body {
   text-align: center;
   margin: 0;
   margin-bottom: 62px;
+  position: relative;
 }
 
+.advantages-item-light-blue h3::before,
+.advantages-item-blue h3::before {
+  content: "";
+  position: absolute;
+  width: 60px;
+  height: 2px;
+  background-color: rgba(0,0,0,0.3);
+  bottom: -32px;
+  left: 50%;
+  transform: translateX(-50%);
+}
 
 .advantages-item-light-blue p,
 .advantages-item-blue p {
@@ -379,7 +432,7 @@ body {
 .advantages-item-wrapper {
   flex-grow: 1;
   width: 33.3%;
-  padding: 102px 85px;
+  padding: 102px 65px;
 }
 
 
@@ -409,7 +462,7 @@ body {
 
 .advantages-item-light-blue {
   background-color: #f0f6fa;
-  padding: 112px 85px;
+  padding: 112px 65px;
   width: 33.3%;
   min-height: 385px;
 }
@@ -417,7 +470,7 @@ body {
 .advantages-item-blue {
   background-color: #e6f0f6;
   width: 33.3%;
-  padding: 112px 85px;
+  padding: 112px 65px;
   min-height: 385px;
 }
 
@@ -502,8 +555,8 @@ body {
   width: 1200px;
   padding-bottom: 96px;
   padding-top: 95px;
-  padding-left: 300px;
-  padding-right: 300px;
+  padding-left: 200px;
+  padding-right: 200px;
 }
 
 .search-title {
@@ -665,6 +718,7 @@ body {
 
 .button-subscribe:active {
   background-color: #82b3d3;
+  opacity: 0.3
 }
 
 .button-subscribe:disabled {
@@ -740,6 +794,28 @@ body {
 .footer-phone:active {
   color: #d6d0cd;
 }
+
+.copyright {
+  text-decoration: none;
+  display: inline-flex;
+  color:#723f5e;
+  background-color: transparent;
+}
+
+.copyright:hover {
+  color: #756157;
+  opacity: 0.6;
+}
+
+.copyright:focus {
+  color: #000;
+}
+
+.copyright:active {
+  color: #d6d0cd;
+  opacity: 0.3;
+}
+
 
 .footer-contacts {
   display: flex;
@@ -826,8 +902,81 @@ body {
   grid-column-start: 1;
 }
 
+.control {
+  position: relative;
+  display: block;
+  padding-left: 36px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 23px;
+}
+
+.control-mark{
+  position: absolute;
+  top: 2px;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  background: #FFFFFF;
+}
+
+.control-input[type="checkbox"]:checked + .control-mark::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  background-image: url("../images/tick.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.control-input[type="checkbox"] + .control-mark {
+  border-radius: 4px;
+}
+
+.control-input[type="radio"] + .control-mark {
+  border-radius: 50%;
+}
+
+.control:hover {
+  opacity: 0.6;
+}
+
+.control:active {
+  opacity: 0.3;
+}
+
+.control-input {
+  margin: 0 16px 0 0;
+}
+
+.control-input:disabled + .control-mark,
+.control-input:disabled ~ .control-label
+{
+  opacity: 0.1;
+}
+
+.control-input:focus-visible + .control-mark {
+  outline: 3px solid #83B3D3;
+}
+
+
 .catalog-filter-accommodation {
   grid-column-start: 3;
+}
+
+
+.control-input[type="radio"]:checked + .control-mark::before {
+  position: absolute;
+  content: "";
+  top: 5px;
+  left: 5px;
+  width: 10px;
+  height: 10px;
+  background-color: #3F5E72;
+  border-radius: 50%;
 }
 
 .catalog-filter-price {
@@ -909,8 +1058,11 @@ body {
 }
 
 .range-slider-value {
-  display: flex;
-  padding-top: 36px;
+  position: relative;
+  content: "";
+  height: 4px;
+  background-color: rgba(255, 255, 255, 0.3);
+  top: 48px;
 }
 
 .price-range-list {
@@ -934,8 +1086,9 @@ body {
   display: flex;
   max-width: 143px;
   min-height: 50px;
-
+  position: relative;
 }
+
 
 .filter-price-range {
   color: #000000;
@@ -960,11 +1113,45 @@ body {
 
 .range-input-min {
   border-radius: 4px 0 0 4px;
+  padding: 10px;
+  margin: 0;
 }
 
 .range-input-max {
   border-radius: 0 4px 4px 0;
+  padding: 10px;
+  margin: 0;
 }
+
+
+.range-input-min:focus-visible {
+  outline: 3px solid #83B3D3;
+}
+.range-input-min:active {
+  outline: 2px solid #000000;
+}
+
+.range-input-max:focus-visible {
+  outline: 3px solid #83B3D3;
+}
+.range-input-max:active {
+  outline: 2px solid #000000;
+}
+
+
+.range-slider:hover {
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+}
+.range-slider:focus-visible {
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+  outline: 3px solid #83B3D3;
+}
+.range-slider:active {
+  box-shadow: 0 7px 15px rgba(0, 0, 0, 0.4);
+  outline: 2px solid #83B3D3;
+}
+
+
 
 .catalog-filter-submit {
   color: #fff;
@@ -995,6 +1182,7 @@ body {
 
 .catalog-filter-submit:active {
   background-color: #82b3d3;
+  opacity: 0.3
 }
 
 .catalog-filter-submit:disabled {
@@ -1012,9 +1200,10 @@ body {
   text-transform: uppercase;
   width: 100%;
   border-radius: 4px;
-  border: navajowhite;
+  border: 3px solid transparent;
   padding: 8px 8px;
   display: inline-block;
+  transition: border-color 0.3s ease;
 }
 
 .catalog-filter-reset:hover {
@@ -1024,16 +1213,27 @@ body {
 
 .catalog-filter-reset:focus {
   background-color: transparent;
+  outline: 3px solid #83B3D3;
 }
 
 .catalog-filter-reset:active {
   color: #756157;
-  outline: 3px solid #83B3D3;
+  opacity: 0.3;
 }
 
 .catalog-filter-reset:disabled {
-  opacity: 0.2;
+  opacity: 0.1;
 }
+
+
+.range-slider-point {
+  position: absolute;
+  height: 4px;
+  width: 227px;
+  left: 6px;
+  background-color: #FFFFFF;
+}
+
 
 .value-max {
   bottom: 36px;
@@ -1041,8 +1241,11 @@ body {
   height: 20px;
   color: #fff;
   content: "";
+  position: absolute;
   border-radius: 5px;
   margin-left: 207px;
+  transform: translateY(45px);
+  cursor: pointer;
 }
 
 .value-min {
@@ -1051,10 +1254,13 @@ body {
   height: 20px;
   color: #fff;
   content: "";
+  position: absolute;
   border-radius: 5px;
   margin-left: 0;
+  transform: translateY(45px);
+  left: -8px;
+  cursor: pointer;
 }
-
 
 
 /* Результаты поиска */
@@ -1108,12 +1314,25 @@ body {
   padding: 0;
   background-repeat: no-repeat;
   background-position: right 16px center;
-  background-image: url(../images/icons/icon-dropdown.svg);
+  background-image: url("../images/icons/icon-dropdown.svg");
   min-width: 300px;
   border: 2px solid #E5E5E5;
   background-color: transparent;
   border-radius: 4px;
   min-height: 50px;
+  padding-left: 20px;
+}
+
+.select-control:hover,
+.select-control:focus
+ {
+  border: 2px solid #68a2ca;
+  outline: none;
+}
+
+.select-control:disabled {
+  color: rgba(0, 0, 0, 0.3);
+  border: 2px solid rgba(0, 0, 0, 0.3);
 }
 
 
@@ -1140,20 +1359,21 @@ body {
 }
 
 .buttons-view-tile {
-  border: 2px solid #000000;
-  background-image: url(../images/icons/icon-tile.svg);
-  display: inline-block;
-  width: 48px;
-  height: 48px;
-  border-radius: 4px;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-color: transparent;
+  background-image: url("../images/icons/icon-tile.svg");
 }
 
 .buttons-view-card {
-  border: 2px solid #e5e5e5;
-  background-image: url(../images/icons/icon-card.svg);
+  background-image: url("../images/icons/icon-card.svg");
+}
+
+
+.buttons-view-list {
+  background-image: url("../images/icons/icon-list.svg");
+}
+
+.buttons-view-tile,
+.buttons-view-card,
+.buttons-view-list {
   display: inline-block;
   width: 48px;
   height: 48px;
@@ -1163,17 +1383,29 @@ body {
   background-color: transparent;
 }
 
-.buttons-view-list {
-  border: 2px solid #e5e5e5;
-  background-image: url(../images/icons/icon-list.svg);
-  display: inline-block;
-  width: 48px;
-  height: 48px;
-  border-radius: 4px;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-color: transparent;
+.buttons-view-tile-current {
+  border: 2px solid #000;
 }
+
+.buttons-view-tile:hover,
+.buttons-view-card:hover,
+.buttons-view-list:hover {
+  border: 2px solid #000;
+}
+
+.buttons-view-tile:active,
+.buttons-view-card:active,
+.buttons-view-list:active {
+  border: 2px solid #000;
+}
+
+.buttons-view-tile:focus,
+.buttons-view-card:focus,
+.buttons-view-list:focus {
+  border: 2px solid #68a2ca;
+}
+
+
 
 /* Каталог гостиниц: карточки */
 
@@ -1301,12 +1533,47 @@ body {
 
 .add-button-favorite:active {
   background-color: #82b3d3;
+  opacity: 0.3
 }
 
 .add-button-favoritee:disabled {
   background-color: #e5e5e5;
 }
 
+.added-button-favorite {
+  color: #fff;
+  background-color: #7db54f;
+  font-size: 16px;
+  font-style: normal;
+  font-family: "PT Sans", sans-serif;
+  font-weight: 700;
+  line-height: 20px;
+  letter-spacing: 0;
+  text-transform: uppercase;
+  display: inline-block;
+  padding: 8px;
+  text-align: center;
+  align-items: center;
+  border-radius: 4px;
+  text-decoration: none;
+}
+
+.added-button-favorite:hover {
+  background-color:  #6c9e42;
+}
+
+.added-button-favorite:focus {
+  background-color: #6c9e42;
+}
+
+.added-button-favorite:active {
+  background-color: #7db54f;
+  opacity: 0.3
+}
+
+.added-button-favoritee:disabled {
+  background-color: #e5e5e5;
+}
 
 .icon-star {
   width: 100%;
@@ -1335,7 +1602,7 @@ body {
 }
 
 .product-stars-four {
-  background-image: url(../images/icons/icon-star.svg);
+  background-image: url("../images/icons/icon-star.svg");
   background-repeat: repeat-x;
   background-position-y: center;
   padding: 8px 3px;
@@ -1344,7 +1611,7 @@ body {
 }
 
 .product-stars-three {
-  background-image: url(../images/icons/icon-star.svg);
+  background-image: url("../images/icons/icon-star.svg");
   background-repeat: repeat-x;
   background-position-y: center;
   padding: 8px 3px;
@@ -1353,7 +1620,7 @@ body {
 }
 
 .product-stars-two {
-  background-image: url(../images/icons/icon-star.svg);
+  background-image: url("../images/icons/icon-star.svg");
   background-repeat: repeat-x;
   background-position-y: center;
   padding: 8px 3px;
@@ -1381,13 +1648,6 @@ body {
   margin-bottom: 60px;
 }
 
-.pagination-link {
-  display: block;
-  box-sizing: border-box;
-  width: 60px;
-  min-height: 60px;
-  border-radius: 4px;
-}
 
 .pagination-link:hover {
   background-color: #68a2ca;
@@ -1399,17 +1659,13 @@ body {
 
 .pagination-link:active {
   background-color: #82b3d3;
+  opacity: 0.3
 }
 
 .pagination-link:disabled {
   background-color: #e5e5e5;
 }
 
-
-.pagination-current {
-  color: #000000;
-  background-color: #F2F2F2;
-}
 
 .pagination-current:hover {
   background-color: #f2f2f2;
@@ -1470,6 +1726,12 @@ body {
   text-transform: none;
 }
 
+.pagination-current {
+  color: #000000;
+  background-color: #F2F2F2;
+  pointer-events: none;
+}
+
 .pagination-points:hover {
   background-color: transparent;
 }
@@ -1484,4 +1746,268 @@ body {
 
 .pagination-points:disabled {
   background-color: transparent;
+}
+
+/* Модальное окно */
+
+.modal {
+  position: relative;
+  margin: auto;
+  padding: 64px 70px;
+  background: #FFFFFF;
+  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
+  border-radius: 30px;
+}
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(242, 242, 242, 0.8);
+}
+
+.modal-search {
+  width: 717px;
+}
+
+.modal-close-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0;
+  margin: 64px 52px 0 0;
+  width: 52px;
+  height: 52px;
+  background-color: #f2f2f2;
+  border-radius: 50%;
+  border: 0;
+  background-image: url("../images/close.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+}
+
+.modal-title {
+  margin: 0 0 64px 0;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+}
+
+/*
+.modal-container-close {
+  display: none;
+}
+*/
+
+.modal-title {
+  margin: 0 0 64px 0;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+}
+.modal-form {
+  display: grid;
+  grid-template-columns: 247px 247px;
+  gap: 0 82px;
+}
+.field-group {
+  display: grid;
+  grid-template-columns: 137px 440px;
+  grid-column: 1 / -1;
+  margin-bottom: 17px;
+  align-items: center;
+}
+.modal-form-label {
+  font-size: 20px;
+  line-height: 24px;
+  text-transform: capitalize;
+  word-wrap: break-word;
+}
+.modal-form-field {
+  margin: 0;
+  padding: 10px 50px 10px 18px;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  color: #000000;
+  background-color: #F2F2F2;
+  border: 2px solid transparent;
+  border-radius: 4px;
+  background-image: url("../images/calendar.svg");
+  background-repeat: no-repeat;
+  background-position: right 20px center;
+}
+.modal-form-field::placeholder {
+  opacity: 0.6;
+}
+.modal-form-field:hover {
+  background-color: #E6E6E6;
+}
+.modal-form-field:focus {
+  outline: 3px solid #83B3D3;
+}
+.modal-form-field:active {
+  border: 2px solid #000000;
+}
+.modal-form-field:disabled {
+  opacity: 0.1;
+}
+.modal-text {
+  grid-column: 2 / -1;
+  padding: 5px 20px;
+  font-size: 16px;
+  font-weight: 400;
+  word-wrap: break-word;
+}
+.modal-text-error {
+  color: #FF5757;
+}
+.modal-form-quantity {
+  display: grid;
+  grid-template-columns: 130px 110px;
+  column-gap: 7px;
+  align-items: center;
+}
+.modal-form-field-wrapper {
+  display: grid;
+  grid-template-columns: 40px 31px 40px;
+}
+.modal-form-field-count {
+  margin: 0;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 28px;
+  color: #000000;
+  background-color: #F2F2F2;
+  border: none;
+  font-family: inherit;
+  text-align: center;
+  appearance: textfield;
+  outline: none;
+}
+.modal-form-field-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  background-color: #F2F2F2;
+  outline: none;
+  cursor: pointer;
+}
+.modal-form-field-icon {
+  display: block;
+  color: rgba(117, 97, 87, 0.3);
+}
+.modal-form-field-button:hover .modal-form-field-icon {
+  color: #000000;
+}
+.modal-form-field-button:focus-visible .modal-form-field-icon {
+  border-radius: 4px;
+  outline: 3px solid #82B3D3;
+}
+.modal-form-field-button:active .modal-form-field-icon{
+  opacity: 0.2;
+}
+.modal-form-field-button:disabled .modal-form-field-icon{
+  opacity: 0.1;
+}
+.modal-form-field-minus {
+  border-radius: 4px 0 0 4px;
+}
+.modal-form-field-plus {
+  border-radius: 0 4px 4px 0;
+}
+.modal-form-field-count::-webkit-outer-spin-button,
+.modal-form-field-count::-webkit-inner-spin-button {
+  margin: 0;
+  appearance: none;
+}
+.modal-form-wrapper-kids {
+  display: flex;
+  justify-self: flex-start;
+  align-items: center;
+}
+.modal-form-wrapper-kids .modal-form-label {
+  margin-left: 6px;
+  margin-right: 11px;
+  max-width: 82px;
+}
+.tooltip {
+  display: flex;
+  justify-content: center;
+  flex-shrink: 0;
+  padding: 0;
+  margin: 0;
+  width: 26px;
+  height: 26px;
+  color: #FFFFFF;
+  background-color: #83B3D3;
+  border-radius: 50%;
+  align-items: center;
+  border: none;
+}
+.tooltip:hover .tooltip-icon {
+  color: #000000;
+}
+.tooltip-wrapper {
+  position: relative;
+}
+.tooltip-icon {
+  display: block;
+}
+.tooltip-text {
+  position: absolute;
+  z-index: 3;
+  display: none;
+  top: 41px;
+  left: 50%;
+  margin: 0;
+  padding: 20px 22px 24px;
+  width: 256px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  border-radius: 10px;
+  color: #FFFFFF;
+  background-color: #333333;
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
+  transform: translateX(-50%);
+}
+.tooltip-text::before {
+  position: absolute;
+  content: "";
+  top: -6px;
+  left: 50%;
+  width: 13px;
+  height: 13px;
+  background-color: #333333;
+  transform: translateX(-50%) rotate(45deg);
+}
+.tooltip:hover + .tooltip-text,
+.tooltip:focus + .tooltip-text {
+  display: block;
+}
+.modal-form-search {
+  grid-column: 1 / -1;
+  margin-top: 48px;
+  padding-top: 18px;
+  padding-bottom: 18px;
+  font-size: 20px;
+  line-height: 24px;
+  word-wrap: break-word;
+  color: #FFFFFF;
+  background-color: #83B3D3;
+  border-radius: 10px;
+  border: none;
+}
+.modal-form-search:hover,
+.modal-form-search:focus {
+  background-color: #68A2CA;
 }
