--- a/styles/styles.css
+++ b/styles/styles.css
@@ -76,6 +76,8 @@ body {
   margin: 0;
   max-width: 600px;
   list-style-type: none;
+  padding: 0;
+  padding-left: 28px;
 }
 
 .navigation-link,
@@ -128,7 +130,7 @@ body {
   text-decoration: none;
   text-transform: none;
   color: #000000;
-  padding: 24px 16px 19px;
+  padding: 24px 13px 19px;
   display: block;
 }
 
@@ -215,6 +217,8 @@ body {
   text-align: center;
   color:#723f5e;
   background-color: transparent;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer-social-link:hover {
@@ -306,7 +310,7 @@ body {
   text-transform: uppercase;
   padding: 0;
   margin: 0;
-  margin-bottom: 20px;
+  margin-bottom: 24px;
   padding-left: 200px;
   padding-right: 200px;
 }
@@ -349,7 +353,7 @@ body {
   margin: 0;
   padding: 0;
   list-style-type: none;
-  margin-top: 100px;
+  margin-top: 90px;
   background-color: #82b3d3;
 }
 
@@ -427,7 +431,7 @@ body {
 .advantages-item-wrapper {
   flex-grow: 1;
   width: 33.3%;
-  padding: 102px 65px;
+  padding: 102px 77px;
 }
 
 
@@ -512,8 +516,10 @@ body {
 
 .infrastructure-title {
   margin: 0;
-  margin-bottom: 30px;
+  margin-bottom: 27px;
   text-transform: uppercase;
+  font-size: 24px;
+  line-height: 1.2;
 }
 
 .infrastructure-item-hotel {
@@ -546,10 +552,10 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  min-height: 406px;
+  min-height: 380px;
   width: 1200px;
   padding-bottom: 96px;
-  padding-top: 95px;
+  padding-top: 71px;
   padding-left: 200px;
   padding-right: 200px;
 }
@@ -634,6 +640,7 @@ body {
   padding-bottom: 104px;
   padding-left: 258px;
   padding-right: 258px;
+  margin-top: -1px;
 }
 
 .subscribe-title {
@@ -656,7 +663,7 @@ body {
   line-height: 26px;
   text-transform: none;
   margin: 0;
-  padding-top: 50px;
+  padding-top: 20px;
 }
 
 .subscribe-form {
@@ -729,8 +736,8 @@ body {
   margin: 0 auto;
   width: 1200px;
   padding: 0 70px;
-  padding-top: 40px;
-  padding-bottom: 30px;
+  padding-top: 44px;
+  padding-bottom: 32px;
   box-shadow: none;
 }
 
@@ -772,6 +779,7 @@ body {
   text-decoration: none;
   text-align: center;
   margin: 0;
+  padding-right: 22px;
 }
 
 .footer-phone:hover {
@@ -825,14 +833,15 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   padding: 35px 70px 70px 70px;
-  margin-bottom: 50px;
+  margin-bottom: 44px;
 }
 
 .catalog-header-title {
   padding: 0;
   margin: 0;
-  padding-top: 35px;
   padding-left: 0;
+  font-size: 60px;
+  line-height: 1.2;
 }
 
 .breadcrumbs {
@@ -840,10 +849,11 @@ body {
   margin: 0;
   padding: 0;
   padding-left: 0;
-  padding-top: 20px;
+  padding-top: 16px;
   position: relative;
   box-sizing: border-box;
   gap: 10px;
+  padding-bottom: 40px;
 }
 
 .breadcrumbs-item {
@@ -859,7 +869,14 @@ body {
   flex-wrap: wrap;
   position: relative;
   text-decoration: none;
-  padding-bottom: 40px;
+}
+
+.breadcrumbs-item:not(:last-of-type) {
+  background-image: url("../images/icons/icon-arrow.svg");
+  background-repeat: no-repeat;
+  background-position-y: center;
+  background-position-x: right;
+  padding-right: 20px;
 }
 
 .breadcrumbs-link {
@@ -877,7 +894,7 @@ body {
 
 .hotel-catalog-filter {
   display: grid;
-  grid-template-columns: 160px 1fr 150px 2fr 288px 1fr 191px;
+  grid-template-columns: 160px 0.9fr 150px 2fr 288px 1fr 191px;
   min-height: 160px;
 }
 
@@ -981,6 +998,7 @@ body {
   flex-direction: column;
   width: 100%;
   max-width: 191px;
+  padding-top: 55px;
   justify-content: flex-end;
 }
 
@@ -1050,7 +1068,7 @@ body {
   content: "";
   height: 4px;
   background-color: rgba(255, 255, 255, 0.3);
-  top: 48px;
+  margin-top: 40px;
 }
 
 .price-range-list {
@@ -1096,17 +1114,24 @@ body {
   background-color: #F2F2F2;
   border: none;
   appearance: textfield;
+  margin: 0;
+}
+
+.range-input ::-webkit-outer-spin-button,
+.range-input::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
 }
 
 .range-input-min {
   border-radius: 4px 0 0 4px;
-  padding: 10px;
+  padding: 10px 20px;
   margin: 0;
 }
 
 .range-input-max {
   border-radius: 0 4px 4px 0;
-  padding: 10px;
+  padding: 10px 20px;
   margin: 0;
 }
 
@@ -1154,7 +1179,7 @@ body {
   width: 100%;
   border-radius: 4px;
   border: navajowhite;
-  margin-bottom: 32px;
+  margin-bottom: 28px;
   padding: 8px 8px;
   display: inline-block;
 }
@@ -1216,35 +1241,38 @@ body {
   position: absolute;
   height: 4px;
   width: 227px;
-  left: 6px;
+  left: 0;
   background-color: #FFFFFF;
 }
 
 .value-max {
-  bottom: 36px;
-  width: 20px;
-  height: 20px;
+  bottom: -8px;
+  width: 21px;
+  height: 22px;
   color: #fff;
+  border: #FFFFFF;
   content: "";
   position: absolute;
   border-radius: 5px;
-  margin-left: 207px;
-  transform: translateY(45px);
   cursor: pointer;
+  transform: translateX(207px);
+  cursor: pointer;
+  left: 0;
 }
 
 .value-min {
   bottom: 36px;
-  width: 20px;
-  height: 20px;
+  width: 21px;
+  height: 22px;
   color: #fff;
+  border: #FFFFFF;
   content: "";
   position: absolute;
   border-radius: 5px;
   margin-left: 0;
-  transform: translateY(45px);
-  left: -8px;
+  left: 0;
   cursor: pointer;
+  bottom: -9px;
 }
 
 /* Результаты поиска */
@@ -1252,11 +1280,11 @@ body {
 .catalog-search-title {
   padding: 0;
   margin: 0;
-  min-width: 340px;
+  min-width: 538px;
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
-  padding-right: 150px;
+  padding-right: 40px;
 }
 
 .catalog {
@@ -1275,6 +1303,7 @@ body {
   padding-top: 50px;
   margin-bottom: 40px;
   padding: 0 70px;
+  align-items: center;
 }
 
 .select-wrapper {
@@ -1304,6 +1333,7 @@ body {
   border-radius: 4px;
   min-height: 50px;
   padding-left: 20px;
+  min-width: 290px;
 }
 
 .select-control:hover,
@@ -1336,7 +1366,6 @@ body {
   margin: 0;
   padding: 0;
   list-style-type: none;
-  margin-left: 70px;
   gap: 8px;
 }
 
@@ -1411,6 +1440,13 @@ body {
   grid-column: 1 / -1;
 }
 
+.product-card-title {
+  font-size: 24px;
+  line-height: 28px;
+  margin: 3px;
+  margin-top: 11px;
+}
+
 .product-cards {
   display: grid;
   column-gap: 20px;
@@ -1425,6 +1461,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 15px;
+  margin-left: 3px;
 }
 
 .product-card-type {
@@ -1449,6 +1487,7 @@ body {
   text-transform: none;
   text-align: right;
   margin: 0;
+  padding-right: 3px;
 }
 
 .product-card-button-about {
@@ -1462,10 +1501,14 @@ body {
   letter-spacing: 0;
   text-transform: uppercase;
   display: inline-block;
-  padding: 8px;
+  padding: 7px;
   text-align: center;
   border-radius: 4px;
   text-decoration: none;
+  margin-top: -4px;
+  margin-left: 1px;
+  margin-right: 1px;
+  margin-bottom: 6px;
 }
 
 .product-card-button-about:hover {
@@ -1495,12 +1538,17 @@ body {
   letter-spacing: 0;
   text-transform: uppercase;
   display: inline-block;
-  padding: 8px;
+  padding: 7px;
   text-align: center;
   align-items: center;
   border-radius: 4px;
   text-decoration: none;
+  margin-top: -4px;
+  margin-left: 1px;
+  margin-right: 1px;
+  margin-bottom: 6px;
 }
+
 
 .add-button-favorite:hover {
   background-color: #68a2ca;
@@ -1535,6 +1583,10 @@ body {
   align-items: center;
   border-radius: 4px;
   text-decoration: none;
+  margin-top: -4px;
+  margin-left: 1px;
+  margin-right: 1px;
+  margin-bottom: 6px;
 }
 
 .added-button-favorite:hover {
@@ -1554,10 +1606,13 @@ body {
   background-color: #e5e5e5;
 }
 
+
+
 .icon-star {
   width: 100%;
   overflow: hidden;
 }
+
 
 .product-card-reiting {
   color: #333;
@@ -1571,8 +1626,10 @@ body {
   width: 140px;
   border-radius: 4px 4px 4px 4px;
   margin: 0;
-  padding: 8px 3px;
+  padding: 0 3px;
   text-align: center;
+  margin-bottom: 10px;
+  margin-top: 0;
 }
 
 .product-stars {
@@ -1584,8 +1641,6 @@ body {
   background-image: url("../images/icons/icon-star.svg");
   background-repeat: repeat-x;
   background-position-y: center;
-  padding: 8px 3px;
-  display: flex;
   width: 72px;
 }
 
@@ -1593,8 +1648,6 @@ body {
   background-image: url("../images/icons/icon-star.svg");
   background-repeat: repeat-x;
   background-position-y: center;
-  padding: 8px 3px;
-  display: flex;
   width: 52px;
 }
 
@@ -1602,16 +1655,7 @@ body {
   background-image: url("../images/icons/icon-star.svg");
   background-repeat: repeat-x;
   background-position-y: center;
-  padding: 8px 3px;
-  display: flex;
   width: 35px;
-}
-
-.product-card-cost {
-  color: #333333;
-  margin: 0;
-  line-height: 21px;
-  text-align: right;
 }
 
 /* Пагинация */
@@ -1682,7 +1726,7 @@ body {
   box-sizing: border-box;
   width: 60px;
   min-height: 60px;
-  padding: 12px 12px;
+  padding: 11px 12px;
   font-size: 20px;
   line-height: 36px;
   color: #FFFFFF;
@@ -1690,6 +1734,7 @@ body {
   text-decoration: none;
   text-align: center;
   border-radius: 4px;
+  margin-top: -7px;
 }
 
 .pagination-points {
@@ -1701,6 +1746,7 @@ body {
   font-weight: 400;
   line-height: 26px;
   text-transform: none;
+  padding-top: 17px;
 }
 
 .pagination-current {
