--- a/styles/styles.css
+++ b/styles/styles.css
@@ -834,7 +834,7 @@ body {
   background-image: url("../images/substrate-filter.png");
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 35px 70px 70px 70px;
+  padding: 37px 70px 69px 70px;
   margin-bottom: 44px;
 }
 
@@ -851,11 +851,11 @@ body {
   margin: 0;
   padding: 0;
   padding-left: 0;
-  padding-top: 16px;
+  padding-top: 11px;
   position: relative;
   box-sizing: border-box;
   gap: 10px;
-  padding-bottom: 40px;
+  padding-bottom: 39px;
 }
 
 .breadcrumbs-item {
@@ -1072,7 +1072,7 @@ body {
   content: "";
   height: 4px;
   background-color: rgba(255, 255, 255, 0.3);
-  margin-top: 40px;
+  margin-top: 43px;
 }
 
 .price-range-list {
@@ -1184,7 +1184,7 @@ body {
   border-radius: 4px;
   border: navajowhite;
   margin-bottom: 28px;
-  padding: 8px 8px;
+  padding: 9px 6px;
   display: inline-block;
 }
 
@@ -1284,11 +1284,11 @@ body {
 .catalog-search-title {
   padding: 0;
   margin: 0;
-  min-width: 400px;
+  max-width: 400px;
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
-  padding-right: 40px;
+  padding: 8px 1px;
 }
 
 .catalog {
@@ -1298,7 +1298,8 @@ body {
   font-family: "PT Sans", sans-serif;
   font-weight: 700;
   line-height: 36px;
-  text-transform: uppercase
+  text-transform: uppercase;
+  padding-top: 4px;
 }
 
 .catalog-result {
@@ -1307,13 +1308,14 @@ body {
   padding-top: 50px;
   margin-bottom: 40px;
   padding: 0 70px;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .select-wrapper {
   position: relative;
   display: flex;
   align-items: center;
+  margin-left: auto;
 }
 
 .select-control {
@@ -1335,7 +1337,7 @@ body {
   background-color: transparent;
   border-radius: 4px;
   min-height: 50px;
-  padding-left: 20px;
+  padding-left: 15px;
   min-width: 290px;
 }
 
