--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1624,7 +1624,7 @@ body {
   border-radius: 4px 4px 4px 4px;
   margin: 0;
   text-align: center;
-  margin-bottom: -4px;
+  margin-bottom: 0;
   margin-top: 0;
   align-self: center;
   padding: 7px 4px;
